Changed formats to extended data figures and tables

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -113,11 +113,10 @@ coilin]{avoid discarding}{managers and fishers maximise catches}.
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding\cite{Uhlmann2014}.\deleted{A
 	paradigm shift is being introduced} Under the EU Common Fisheries
-Policy (CFP) reform of 2012\deleted{through two significant management
-	changes.  First}, by 2019 all fish that are caught are due to be
-counted against the respective stock quota\deleted{; second, by 2020 all fish
-	stocks must be fished so as to be able to produce their Maximum
-	Sustainable Yield
+Policy (CFP) reform of 2012\deleted{through two significant management changes.
+	First}, by 2019 all fish that are caught are due to be counted against
+the respective stock quota\deleted{; second, by 2020 all fish stocks must be
+	fished so as to be able to produce their Maximum Sustainable Yield
 	(MSY)\cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}. The
 	changes are}\deleted[id = coilin]{, expected to contribute to
 	attainment of the goal of Good Environmental Status (GES) under the
@@ -126,14 +125,14 @@ counted against the respective stock quota\deleted{; second, by 2020 all fish
 	ecosystem based approach to fisheries management\cite{Garcia2003}}.
 \deleted{Societal objectives for fisheries to achieve MSY across ecosystem
 	components are paralleled by}\deleted{Individual fishers goals
-	%\added[id =
-%coilin]{are to} maximise utility; whether that be profit, income or the
+	%\added[id = coilin]{are to} maximise utility; whether that be profit,
+	%income or the
 continuance of traditional practices.}\deleted{Under the new policy,}Unless
 fishers can avoid catch of unwanted species they will have to stop fishing when
 reaching their first restrictive quota \deleted{. This} introducing a
 \deleted{potential} significant cost to\deleted{fishers of} under-utilised
-quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate
-such losses\cite{Condie2013}. The ability\deleted{of fishers} to align
+quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate such
+losses\cite{Condie2013}. The ability\deleted{of fishers} to align
 \deleted{their}catch with available quota depends on being able to exploit
 target species while avoiding unwanted catch,\deleted{ Methods by which fishers
 	can alter their fishing patterns include} either by switching fishing
@@ -202,18 +201,19 @@ species have been identified in the commercial catches of the Celtic Sea, with
 approximately 30 species dominating the catch\cite{Mateo2016}. We parametrise
 our \deleted{spatiotemporal} model using catch data from seven
 fisheries-independent surveys undertaken\deleted{in the Celtic Sea} over the
-period 1990 - 2015 (Table S1) and include nine of the main commercial species
-(see Table S2, Figure 2) \deleted{: Atlantic cod (\textit{Gadus morhua}),
-	Atlantic haddock (\textit{Melanogrammus aeglefinus}), Atlantic whiting
-	(\textit{Merlangius merlangus}), European Hake (\textit{Merluccius
-		merluccius}), white-bellied anglerfish (\textit{Lophius
-		piscatorius}), black-bellied anglerfish (\textit{Lophius
-		budegassa}), megrim (\textit{Lepidorhombus whiffiagonis}),
-	European Plaice (\textit{Pleuronectes platessa}) and Common Sole
-	(\textit{Solea solea}). These species} which make up \textgreater 60 \%
-of landings by towed fishing gears for the area (average 2011 -
-2015;\cite{STECF2017}). Each species was separated into juvenile and adult size
-classes based on their legal minimum conservation reference size (Table S2).
+period 1990 - 2015 (Extended Data Table 1) and include nine of the main
+commercial species (see Extended Data Table 2, Fig. 2) \deleted{: Atlantic cod
+	(\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus
+		aeglefinus}), Atlantic whiting (\textit{Merlangius merlangus}),
+	European Hake (\textit{Merluccius merluccius}), white-bellied
+	anglerfish (\textit{Lophius piscatorius}), black-bellied anglerfish
+	(\textit{Lophius budegassa}), megrim (\textit{Lepidorhombus
+		whiffiagonis}), European Plaice (\textit{Pleuronectes
+		platessa}) and Common Sole (\textit{Solea solea}). These
+	species} which make up \textgreater 60 \% of landings by towed fishing
+gears for the area (average 2011 - 2015;\cite{STECF2017}). Each species was
+separated into juvenile and adult size classes based on their legal minimum
+conservation reference size (Extended Data Table 2).
 
 \deleted[id = coilin]{We analyse the data to understand how the different
 	associations among emergent species-groups (combination of species and
@@ -231,7 +231,7 @@ species variance in average positive density. A clear spatial pattern can been
 seen both for encounter probability and positive density, with a positive value
 associated with the first factor in the inshore north easterly part of the
 Celtic Sea into the Bristol Channel and Western English Channel, moving to a
-negative value offshore in the south-westerly waters (Figure 1).  The species
+negative value offshore in the south-westerly waters (Fig. 1).  The species
 loadings coefficients show plaice, sole and whiting to be positively associated
 with the first factor for encounter probability while the other species are
 negatively associated. For average positive density, positive associations are
@@ -245,7 +245,7 @@ inshore areas. Species values for the second factor indicate there are positive
 associations for juvenile monkfish (\emph{L. piscatorius}), juvenile hake,
 juvenile megrim, plaice and juvenile whiting with average positive density,
 which may reflect two different spatial distributions in the more offshore and
-in the inshore areas (Figure 1).
+in the inshore areas (Fig. 1).
 
 On the third factor, there is a positive association with the easterly waters
 for encounter probability and negative with the westerly waters. This
@@ -253,29 +253,30 @@ for encounter probability and negative with the westerly waters. This
 roundfish species cod, haddock and whiting which\deleted{all} have a positive
 association with the third factor for average encounter probability from the
 rest of the species \deleted{which have a negative association}.  Positive
-density is driven by a north / south split (Figure 1), with positive values in
+density is driven by a north / south split (Fig. 1), with positive values in
 the northerly areas. Juvenile monkfish (\emph{L.  budgessa} and \emph{L.
 	piscatorius}), cod, juvenile haddock, hake, adult plaice and whiting
 are also positively associated with the third factor in the north while adult
 monkfish (\emph{L. budgessa} and \emph{L.  piscatorius}), adult haddock,
 megrims, juvenile plaice and sole are negatively associated \deleted{reflecting
-	their more southerly distribution} (Figure 1).
+	their more southerly distribution} (Fig. 1).
 
 \deleted{While this exploratory factor analysis is modelling unobserved drivers
 	of distribution,} \deleted[id = brutus]{We considered what might be
 	driving the differences seen in the spatial factor loadings. The first
 	factor was highly correlated with log(depth) for both encounter
-	probability (-0.85, CI = -0.88 to -0.81; Figure S1) and positive
-	density (-0.71, CI = -0.77 to -0.65; Figure S2),} \deleted{A random
-	forest classification tree assigned} \deleted[id = brutus]{with 80 \%
-	of the variance in the first factor for encounter probability to depth
-	and predominant substrate type, with the majority (86 \%) of the
-	variance explained by depth (random forest classification tree).}
-\deleted{The variance explained by these variables dropped to 25 \% on the
-	second factor with a more even split between depth and substrate, while
-	explaining 60 \% of the variance on the third factor.  For positive
-	density, the variables explained less of the variance with 62 \%, 35
-	\%, and 31 \% for each of the factors, respectively.}
+	probability (-0.85, CI = -0.88 to -0.81; Extended Data Fig. 1) and
+	positive density (-0.71, CI = -0.77 to -0.65; Extended Data Fig. 2),}
+\deleted{A random forest classification tree assigned} \deleted[id =
+brutus]{with 80 \% of the variance in the first factor for encounter
+	probability to depth and predominant substrate type, with the majority
+	(86 \%) of the variance explained by depth (random forest
+	classification tree).} \deleted{The variance explained by these
+	variables dropped to 25 \% on the second factor with a more even split
+	between depth and substrate, while explaining 60 \% of the variance on
+	the third factor.  For positive density, the variables explained less
+	of the variance with 62 \%, 35 \%, and 31 \% for each of the factors,
+	respectively.}
 
 \deleted[id = brutus]{It is clear that depth and to a lesser extent substrate
 	are important predictors for the main driver of similarities and
@@ -296,73 +297,72 @@ brutus]{, as identified in other marine species distribution
 		over time, but stability in species dynamics}}\deleted{While
 	there are clear spatial patterns in the factor coefficients describing
 	differences in average (over time) encounter probability and positive
-	density (Figure 1),}\deleted{The} Inter-annual differences in factor
-coefficients show less structure (Figures S5, S6). These inter-annual
+	density (Fig. 1),}\deleted{The} Inter-annual differences in factor
+coefficients show less structure (Extended Data Figs. 5,6). These inter-annual
 differences are important as they reflect the ability of fishers to predict
 where they can target species from one year to the next.\deleted{, without
 	which it may be difficult to avoid unwanted catch}\deleted{There were,
 	however, While spatio-temporal factor coefficients did not show
 	consistent trends from year to year across all species,} Common
-patterns in spatiotemporal factor coefficients among species\deleted{there
-	were clear relationships (Figure 2)}\deleted{.  The same factors
-	appear to} drive spatiotemporal distributions of megrim, anglerfish
-species and hake (the deeper water species, species-group negatively associated
-with the second axes of Figure 2a) and the roundfish and flatfish
-(species-group more positively associated with the second axes of Figure 2a).
-For spatio-temporal positive density (Figure 2b) cod, haddock and whiting (the
-roundfish species) are separated from plaice, sole (the flatfish) and deeper
-water species. \deleted{As such,} \deleted[id = brutus]{From this it can be
-	predicted that higher catches of a species within a group (e.g.  cod in
-	roundfish) would be expected when catching another species within that
-	group (e.g. whiting in roundfish), \deleted{. This} suggesting
-	\deleted{that} one or more common environmental drivers are influencing
-	the distributions of the species groups, and that driver differentially
-	affects the species groups, but this could not be explained by
-	temperature} \deleted{is often included as a covariate in species
-	distribution models, but was found not to contribute to the variance in
-	the first factor values}\deleted[id = brutus]{ (Figure S6, no
-	correlations found for either encounter probability or positive
-	density).}
+patterns in spatiotemporal factor coefficients among species\deleted{there were
+	clear relationships (Fig. 2)}\deleted{.  The same factors appear to}
+drive spatiotemporal distributions of megrim, anglerfish species and hake (the
+deeper water species, species-group negatively associated with the second axes
+of Fig. 2a) and the roundfish and flatfish (species-group more positively
+associated with the second axes of Fig. 2a).  For spatio-temporal positive
+density (Fig. 2b) cod, haddock and whiting (the roundfish species) are
+separated from plaice, sole (the flatfish) and deeper water species.
+\deleted{As such,} \deleted[id = brutus]{From this it can be predicted that
+	higher catches of a species within a group (e.g.  cod in roundfish)
+	would be expected when catching another species within that group (e.g.
+	whiting in roundfish), \deleted{. This} suggesting \deleted{that} one
+	or more common environmental drivers are influencing the distributions
+	of the species groups, and that driver differentially affects the
+	species groups, but this could not be explained by temperature}
+\deleted{is often included as a covariate in species distribution models, but
+	was found not to contribute to the variance in the first factor
+	values}\deleted[id = brutus]{ (Extended Data Fig. 6, no correlations
+	found for either encounter probability or positive density).}
 
 \subsection{Three clusters of species show similar spatial patterns}
 \replaced[id = coilin]{To}{In order to} gain greater insight into the community
 dynamics we considered how species covary in space and time through among
 species correlations. Pearson correlation coefficients for the modelled average
-spatial encounter probability (Figure 3a) show clear strong associations
-between adult and juvenile size classes for all species (\textgreater 0.75 for
-all species except hake, 0.56).\deleted{Among species-groups,} Hierarchical
+spatial encounter probability (Fig. 3a) show clear strong associations between
+adult and juvenile size classes for all species (\textgreater 0.75 for all
+species except hake, 0.56).\deleted{Among species-groups,} Hierarchical
 clustering identified the same three common groups\deleted[id = brutus]{as our
 	visual inspection of factor loadings above,} with roundfish (cod,
 haddock, whiting)\deleted{closely grouped in their association, with
 	correlations for adult cod with adult haddock and adult whiting of 0.73
 	and 0.5 respectively, while adult haddock with adult whiting was 0.63
-	(Figure 3a).}, flatfish (plaice and sole)\deleted{are also strongly
+	(Fig. 3a).}, flatfish (plaice and sole)\deleted{are also strongly
 	correlated with adult plaice and sole having a coefficient of 0.75.
 	The final group are principally the} and species found in the deeper
 waters (hake, megrim and both anglerfish species)\deleted{with the megrim
 	strongly associated with the budegassa anglerfish species (0.88).
 	Negative relationships were found between plaice, sole and the monkfish
 	species (-0.27, -0.26 for the adult size class with budegassa adults
-	respectively) and hake (-0.33, -0.37) (Figure 3a)} showing strong
+	respectively) and hake (-0.33, -0.37) (Fig. 3a)} showing strong
 intra-group correlations indicating similar spatial distributions.\deleted{This
 	confirms the associations among species seen in the factor loadings,
 	with three distinct species-group assemblages being
 	present.}\deleted{This is also evident in} Correlation coefficients for
 the average positive density also have strong associations among\deleted{the}
-roundfish (Figure 3b). \deleted{show fewer significant positive or negative
+roundfish (Fig. 3b). \deleted{show fewer significant positive or negative
 	relationships among species than for encounter probability, but still
-	evident are the
-	strong association among the roundfish with higher catches of cod are
-	associated with higher catches of haddock (0.58) and whiting (0.47), as
-	well as the two anglerfish species (0.71 for piscatorius and 0.44 for
-	budegassa) and hake (0.73). Similarly, plaice and sole are closely
-	associated (0.31) and higher catches of one would expect to see higher
-	catches of the other, but also higher catches of some juvenile size
-	classes of roundfish (whiting and haddock) and anglerfish species.
-	Negative association of juvenile megrim, anglerfish (budegassa) and
-	hake with adult sole (-0.61, -0.61 and -0.47 respectively), plaice
-	(-0.36 and -0.35 for megrim and hake only) indicate high catches of one
-	can predict low catches of the other successfully.}
+	evident are the strong association among the roundfish with higher
+	catches of cod are associated with higher catches of haddock (0.58) and
+	whiting (0.47), as well as the two anglerfish species (0.71 for
+	piscatorius and 0.44 for budegassa) and hake (0.73). Similarly, plaice
+	and sole are closely associated (0.31) and higher catches of one would
+	expect to see higher catches of the other, but also higher catches of
+	some juvenile size classes of roundfish (whiting and haddock) and
+	anglerfish species.  Negative association of juvenile megrim,
+	anglerfish (budegassa) and hake with adult sole (-0.61, -0.61 and -0.47
+	respectively), plaice (-0.36 and -0.35 for megrim and hake only)
+	indicate high catches of one can predict low catches of the other
+	successfully.}
 
 \deleted{In addition to the average spatial correlations, we also estimate
 	spatiotemporal correlations. Spatial population correlations
@@ -385,8 +385,9 @@ roundfish (Figure 3b). \deleted{show fewer significant positive or negative
 	another when trying to balance catch with quotas in mixed fisheries. It
 	can also be seen in the spatial factor maps that there are subtle
 	differences in spatial patterns in factor loading values from one year
-	to the next (Figures S4 and S5) indicating changes may be driven by
-	temporally changing environmental factors and species behaviour.}
+	to the next (Extended Data Figs. 4 and 5) indicating changes may be
+	driven by temporally changing environmental factors and species
+	behaviour.}
 
 
 \subsection{Subtle differences in distributions may be important to separate
@@ -402,36 +403,36 @@ within the groups will be key. For example, asking where the maximal separation
 in the densities of two coupled species is likely to occur?\deleted{To address
 	this requirement,} We map the difference in spatial distribution
 \deleted{within a group}for each pair of species within a species-group for a
-single year (2015; Figure 4) \deleted{. This would}\added{to} facilitate
+single year (2015; Fig. 4) \deleted{. This would}\added{to} facilitate
 discussion on maximal separation, for example, between difficult to separate
-species such as haddock and whiting (Figure 4c). \deleted{Cod had a more
+species such as haddock and whiting (Fig. 4c). \deleted{Cod had a more
 	north-westerly distribution than haddock, while cod was more westerly
 	distributed than whiting roughly delineated by the 7$^{\circ}$ W line
-	(Figure 4a). Whiting appeared particularly concentrated in an area
+	(Fig. 4a). Whiting appeared particularly concentrated in an area
 	between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$ W, which can be
-	seen by comparing the whiting distribution with both cod (Figure 4b)
-	and haddock (Figure 4c). For the deeper water species (Figures 4d and
-	4e), hake are more densely distributed in two areas compared to
-	anglerfishes and %\footnote{two species combined as they are managed as
-	one and megrim (though megrim has a stable density across the modelled
-	area as indicated by the large amount of white space). For anglerfishes
-	and megrim (Figure 4f), anglerfishes have a more easterly distribution
-	than megrim.  For the flatfish species plaice and sole (Figure 4g),
-	plaice appear to be more densely distributed along the coastal areas of
+	seen by comparing the whiting distribution with both cod (Fig. 4b) and
+	haddock (Fig. 4c). For the deeper water species (Figs. 4d and 4e), hake
+	are more densely distributed in two areas compared to anglerfishes and
+	%\footnote{two species combined as they are managed as one and megrim
+	(though megrim has a stable density across the modelled area as
+	indicated by the large amount of white space). For anglerfishes and
+	megrim (Fig. 4f), anglerfishes have a more easterly distribution than
+	megrim.  For the flatfish species plaice and sole (Fig. 4g), plaice
+	appear to be more densely distributed along the coastal areas of
 	Ireland and Britain, while sole are more densely distributed in the
 	Southern part of the English Channel along the coast of France.}
 
 Predicted catch distribution from a ``typical'' otter trawl gear and beam trawl
 fishing at three different locations highlights the differences fishing gear
-and location makes on catches (Figure 4h). \deleted{As can be seen, both the
-	gear selectivity and area fished play important contributions to the
-	catch compositions;}In the inshore area (location `A') plaice and
-sole are the two main species\deleted{in} caught reflecting their distribution
-and abundance, though the otter trawl gear catches a greater proportion of
-plaice to sole than the beam trawl. The area between Britain and Ireland
-(location `B') has a greater contribution of whiting, haddock, cod, hake and
-anglerfishes in the catch with the otter trawl catching a greater proportion of
-the roundfish, haddock, whiting and cod while the beam trawl catches more
+and location makes on catches (Fig. 4h). \deleted{As can be seen, both the gear
+	selectivity and area fished play important contributions to the catch
+	compositions;}In the inshore area (location `A') plaice and sole are
+the two main species\deleted{in} caught reflecting their distribution and
+abundance, though the otter trawl gear catches a greater proportion of plaice
+to sole than the beam trawl. The area between Britain and Ireland (location
+`B') has a greater contribution of whiting, haddock, cod, hake and anglerfishes
+in the catch with the otter trawl catching a greater proportion of the
+roundfish, haddock, whiting and cod while the beam trawl catches more
 anglerfishes and megrims. The offshore area has a higher contribution of
 megrim, anglerfishes and hake with the otter trawl catching a greater share of
 hake and the beam trawl a greater proportion of megrim. Megrim dominates the
@@ -443,11 +444,11 @@ area.
 identified spatial separation of three distinct species-groups (roundfish,
 flatfish and deeper water species) while showing that only subtle differences
 exist in distributions within species-groups. The differences in catch
-compositions between gears at the same location (Figure 4h) show that changing
+compositions between gears at the same location (Fig. 4h) show that changing
 fishing methods can go some way to affecting catch, yet that differences in
 catches between locations are likely to be more important. \deleted[id =
 brutus]{For example, beam trawls fishing at the inshore locations (e.g.
-	location `A' in Figure 4) are likely to predominately catch plaice and
+	location `A' in Fig. 4) are likely to predominately catch plaice and
 	sole, yet switching to the offshore locations (e.g. location `C') would
 	likely yield greater catches of megrim and anglerfishes.
 	Such}\added{This highlights that} changes in spatial fishing patterns
@@ -458,11 +459,11 @@ More challenging is within-group spatial separation due to
 \deleted{significant}overlaps in spatial distributions for the species, driven
 by common environmental factors. Subtle changes in location fished may yield
 some benefit in changing catch composition, yet the outcome is likely to be
-much more difficult to predict.\deleted{For example,} Subtle differences in
-the distribution of cod, haddock and whiting can be seen in Figures 4a-c,
-showing spatial separation of catches is \deleted[id = brutus]{much more
-	challenging and}likely to need to be supported by other measures such
-as changes to the selectivity characteristics of gear\cite{Santos2016}. 
+much more difficult to predict.\deleted{For example,} Subtle differences in the
+distribution of cod, haddock and whiting can be seen in Figs. 4a-c, showing
+spatial separation of catches is \deleted[id = brutus]{much more challenging
+	and}likely to need to be supported by other measures such as changes to
+the selectivity characteristics of gear\cite{Santos2016}. 
 
 A role that science can play in supporting effectiveness of spatiotemporal
 avoidance could be in providing probabilistic advice on \deleted{likely}
@@ -494,11 +495,11 @@ effectiveness of spatial avoidance. Differences in ability to change catch
 composition have also been observed for different fleets\deleted{; in the North
 	Sea targeting ability was found to differ between otter and beam
 	trawlers as well as between vessels of different
-	sizes}\cite{Pascoe2007}.\deleted{It is likely}\deleted{, however,
-	that} \added{This} analysis \added{likely} reflects a lower bound on
-\deleted[id = coilin]{the utility of spatial} avoidance as fine-scale
-behavioural decisions such as time-of-day, gear configuration and location
-choices can also be used to affect catch\cite{Abbott2015, Thorson2016}.
+	sizes}\cite{Pascoe2007}.\deleted{It is likely}\deleted{, however, that}
+\added{This} analysis \added{likely} reflects a lower bound on \deleted[id =
+coilin]{the utility of spatial} avoidance as fine-scale behavioural decisions
+such as time-of-day, gear configuration and location choices can also be used
+to affect catch\cite{Abbott2015, Thorson2016}.
 
 \deleted{Our framework allows for a quantitative understanding of the broad
 	scale global production set available to fishers\cite{Reimer2017} and
@@ -525,49 +526,44 @@ spatial management measures. This has important implications for management of
 the mixed fisheries under the EU landings obligation. Our analysis identifies
 where it may be easier to separate catches of species (among groups) and where
 it is more challenging (within groups). We propose that the framework presented
-in Figures 1-4 provides a viable route to reducing the complexity of highly
-mixed systems.  This can allow informed management discussion over more
-traditional anecdotal knowledge of single-species distribution in space and
-time.
+in Figs. 1-4 provides a viable route to reducing the complexity of highly mixed
+systems.  This can allow informed management discussion over more traditional
+anecdotal knowledge of single-species distribution in space and time.
 
 
 \section*{Methods}
 
-\subsection{Model structure:} 
-\added{We use a geostatistical Vector Autoregressive Spatiotemporal model
-	(VAST)}\footnote{Software in the R statistical programming language
-	can be found here: \url{www.github.com/james-thorson/VAST}} to
-implement a delta-generalised linear mixed modelling (GLMM) framework that
-takes account of spatio-temporal correlations among species through
-implementation of a spatial dynamic factor analysis (SDFA). Spatial variation
-is captured through a Gaussian Markov Random Field, while we model random
-variation among species and years. Covariates affecting catchability (to
-account for differences between fishing surveys) and density (to account for
-environmental preferences) can be incorporated for predictions of presence and
-positive density. The following briefly summarises the key methods implemented
-in the VAST framework. For full details of the model the reader is invited
-directed to Thorson \textit{et al} 2017\cite{Thorson2017}.
+\subsection{Model structure:} \added{We use a geostatistical Vector
+	Autoregressive Spatiotemporal model (VAST)}\footnote{Software in the R
+	statistical programming language can be found here:
+	\url{www.github.com/james-thorson/VAST}} to implement a
+delta-generalised linear mixed modelling (GLMM) framework that takes account of
+spatio-temporal correlations among species through implementation of a spatial
+dynamic factor analysis (SDFA). Spatial variation is captured through a
+Gaussian Markov Random Field, while we model random variation among species and
+years. Covariates affecting catchability (to account for differences between
+fishing surveys) and density (to account for environmental preferences) can be
+incorporated for predictions of presence and positive density. The following
+briefly summarises the key methods implemented in the VAST framework. For full
+details of the model the reader is invited directed to Thorson \textit{et al}
+2017\cite{Thorson2017}.
 
 \textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates advances
 in joint dynamic species models\cite{Thorson2017} to take account of
-associations among species by modelling response variables as a
-multivariate process. This is achieved through implementing a factor analysis
-decomposition where common latent trends are estimated so that the number of
-common trends is less than the number of species modelled. The factor
-coefficients are then associated through a function for each factor that
-returns a positive or negative association of one or more species with any
-location. Log-density of any species is then be described as a linear
-combination of factors and loadings:
-	\begin{equation}
-		\theta_{c}(s,t) = \sum_{j=1}^{n_{j}}
-		L_{c,j}\psi_{j}(s,t) +\sum_{k=1}^{n_{k}}
-		\gamma_{k,c}\chi_{k}(s,t)
-	\end{equation}
-Where $\theta_{c}(s,t)$ represents log-density for species $c$ at site $s$ at
-time $t$, $\psi_{j}$ is the coefficient for factor $j$, $L_{c,j}$ the loading
-matrix representing association of species $c$ with factor $j$ and
-$\gamma_{k,c}\chi_{k}(s,t)$ the linear effect of covariates at each site and
-time\cite{Thorson2016b}. 
+associations among species by modelling response variables as a multivariate
+process. This is achieved through implementing a factor analysis decomposition
+where common latent trends are estimated so that the number of common trends is
+less than the number of species modelled. The factor coefficients are then
+associated through a function for each factor that returns a positive or
+negative association of one or more species with any location. Log-density of
+any species is then be described as a linear combination of factors and
+loadings: \begin{equation} \theta_{c}(s,t) = \sum_{j=1}^{n_{j}}
+	L_{c,j}\psi_{j}(s,t) +\sum_{k=1}^{n_{k}} \gamma_{k,c}\chi_{k}(s,t)
+\end{equation} Where $\theta_{c}(s,t)$ represents log-density for species $c$
+at site $s$ at time $t$, $\psi_{j}$ is the coefficient for factor $j$,
+$L_{c,j}$ the loading matrix representing association of species $c$ with
+factor $j$ and $\gamma_{k,c}\chi_{k}(s,t)$ the linear effect of covariates at
+each site and time\cite{Thorson2016b}. 
 
 The factor analysis can identify community dynamics and where species have
 similar spatio-temporal patterns, allowing inference of species distributions
@@ -639,9 +635,10 @@ moving offshore)\cite{Thorson2013}.  The best fit estimated an anisotropic
 covariance where the correlations were stronger in a north-east - south-west
 direction, extending approximately 97 km and 140 km before correlations for
 encounter probability and positive density reduced to \textless 10 \%,
-respectively (Figure S9). Incorporating the spatiotemporal correlations among
-and within species provides more efficient use of the data as inference
-can be made about poorly sampled locations from the covariance structure.
+respectively (Extended Data Fig. 9). Incorporating the spatiotemporal
+correlations among and within species provides more efficient use of the data
+as inference can be made about poorly sampled locations from the covariance
+structure.
 
 A probability distribution for spatio-temporal variation in both encounter
 probability and positive catch rate was specified, $\varepsilon_{*}(s,p,t)$,
@@ -663,9 +660,10 @@ correlation among any location and species can be computed\cite{Thorson2017}.
 efficiency of a gear catching a species) was estimated as a fixed effect in the
 model, $\delta_{s}(v)$, to account for differences in spatial fishing patterns
 and gear characteristics which affect encounter and capture probability of the
-sampling gear\cite{Thorson2014}. Parameter estimates (Figure S10) showed clear
-differential effects of surveys using otter trawl gears (more effective for
-round fish species) and beam trawl gears (more effective for flatfish species).
+sampling gear\cite{Thorson2014}. Parameter estimates (Extended Data Fig. 10)
+showed clear differential effects of surveys using otter trawl gears (more
+effective for round fish species) and beam trawl gears (more effective for
+flatfish species).
 
 No fixed covariates for habitat quality or other predictors of encounter
 probability or positive density were included. While incorporation may improve
@@ -689,9 +687,10 @@ abundances to predict spatial density estimates consistent with the resolution
 of the data. 
 
 The model was been fit to nine species separated into adult and juvenile size
-classes (Table S2) to seven survey series (Table S1) in the Celtic Sea bound by
-48$^{\circ}$ N to 52 $^{\circ}$ N latitude and 12 $^{\circ}$ W to 2$^{\circ}$ W
-longitude (Figure S8) for the years 1990 - 2015 inclusive. 
+classes (Extended Data Table 2) to seven survey series (Extended Data Table 1)
+in the Celtic Sea bound by 48$^{\circ}$ N to 52 $^{\circ}$ N latitude and 12
+$^{\circ}$ W to 2$^{\circ}$ W longitude (Extended Data Fig. 8) for the years
+1990 - 2015 inclusive. 
 
 The following steps were undertaken for data processing: i) data for survey
 stations and catches were downloaded from ICES Datras
@@ -724,17 +723,18 @@ interaction was a random effect, ii) the base but where the vessel x species
 effect was estimated as a fixed covariate, iii) with vessel x species effect
 estimated, but with the addition of estimating fixed density covariates for
 both predominant habitat type at a knot and depth. AIC and BIC model selection
-favoured the second model (Table S3). The final model included estimating
-130,950 coefficients (1,674 fixed parameters and 129,276 random effect values).
+favoured the second model (Extended Data Table 3). The final model included
+estimating 130,950 coefficients (1,674 fixed parameters and 129,276 random
+effect values).
 
 \subsection{Model validation}
 
 Q-Q plots show good fit between the derived estimates and the data for positive
-catch rates and between the predicted and observed encounter probability (S11,
-S12).  Further, model outputs are consistent with stock-level trends abundances
-over time from international assessments (S13), yet also provide detailed
-insight into species co-occurrence and the strength of associations in space
-and time. 
+catch rates and between the predicted and observed encounter probability
+(Extended Data Figs. 11,12).  Further, model outputs are consistent with
+stock-level trends abundances over time from international assessments
+(Extended Data Fig. 13), yet also provide detailed insight into species
+co-occurrence and the strength of associations in space and time. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{linenumbers}
