small space removed

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -129,7 +129,7 @@ the respective stock quota\deleted{; second, by 2020 all fish stocks must be
 	%income or the
 continuance of traditional practices.}\deleted{Under the new policy,}Unless
 fishers can avoid catch of unwanted species they will have to stop fishing when
-reaching their first restrictive quota \deleted{. This} introducing a
+reaching their first restrictive quota,\deleted{. This} introducing a
 \deleted{potential} significant cost to\deleted{fishers of} under-utilised
 quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate such
 losses\cite{Condie2013}. The ability\deleted{of fishers} to align
