small space removed

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -132,31 +132,31 @@ fishers can avoid catch of unwanted species they will have to stop fishing when
 reaching their first restrictive quota,\deleted{. This} introducing a
 \deleted{potential} significant cost to\deleted{fishers of} under-utilised
 quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate such
-losses\cite{Condie2013}. The ability\deleted{of fishers} to align
-\deleted{their}catch with available quota depends on being able to exploit
-target species while avoiding unwanted catch,\deleted{ Methods by which fishers
-	can alter their fishing patterns include} either by switching fishing
-method\deleted{(e.g.  trawling to netting)}, changing technical gear
-characteristics\deleted{(e.g.  introducing escapement panels in nets)}, or the
-timing and location of fishing activity\cite{vanPutten2012a}. \deleted{For
-	example, otter trawl gears are known to have higher catch rates of
-	roundfish due to the higher headline and wider sweeps which herd
-	demersal fish into the net while beam trawls employ chain mesh to
-	%\replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
-	seabed\cite{Fraser2008}.}
+losses\cite{Condie2013}. 
 
-Spatiotemporal\deleted{management} measures\deleted{(such as time-limited
-	fishery closures)} have been applied to reduce unwanted catch with
-varying degrees of success\cite{Needle2011, Dunn2014a}, \added{partly
-	because}\deleted{However, such measures} \added{they} have
-\deleted{generally}been targeted at individual species without considering
-associations\deleted{and interactions} among several species. Highly mixed
-fisheries are complex with spatial, technological and community
-interactions\deleted{combining}; \deleted{The design of spatio-temporal
-	management measures which aim to allow exploitation of high quota
-	stocks while protecting low quota stocks requires understanding of
-	these interactions at a scale meaningful to managers and
-	fishers.}\deleted{Here,} our goal is to develop a framework for
+The ability\deleted{of fishers} to align \deleted{their}catch with available
+quota depends on being able to exploit target species while avoiding unwanted
+catch,\deleted{ Methods by which fishers can alter their fishing patterns
+	include} either by switching fishing method\deleted{(e.g.  trawling to
+	netting)}, changing technical gear characteristics\deleted{(e.g.
+	introducing escapement panels in nets)}, or the timing and location of
+fishing activity\cite{vanPutten2012a}. \deleted{For example, otter trawl gears
+	are known to have higher catch rates of roundfish due to the higher
+	headline and wider sweeps which herd demersal fish into the net while
+	beam trawls employ chain mesh to
+	%\replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
+	seabed\cite{Fraser2008}.}Spatiotemporal\deleted{management}
+measures\deleted{(such as time-limited fishery closures)} have been applied to
+reduce unwanted catch with varying degrees of success\cite{Needle2011,
+	Dunn2014a}, \added{partly because}\deleted{However, such measures}
+\added{they} have \deleted{generally}been targeted at individual species
+without considering associations\deleted{and interactions} among several
+species. Highly mixed fisheries are complex with spatial, technological and
+community interactions\deleted{combining}; \deleted{The design of
+	spatio-temporal management measures which aim to allow exploitation of
+	high quota stocks while protecting low quota stocks requires
+	understanding of these interactions at a scale meaningful to managers
+	and fishers.}\deleted{Here,} our goal is to develop a framework for
 understanding these complexities. We do so by implementing a spatio-temporal
 dimension reduction method and use \deleted{the} results to draw inference on
 the fishery-community dynamics, creating a framework to identify trends common
